# RobotX_ws

./: .gitignore  .gitmodules  README.md
.github/workflows/: BuildRobotX.yml  main.yml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: index.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: index.md.txt  index.rst.txt
docs/source/: conf.py  index.md  index.rst  indextemp
robotx/docs/: index.rst
robotx/interfaces/: CMakeLists.txt
robotx/interfaces/action/: CountUntil.action
robotx/src/actions/: CMakeLists.txt
robotx/src/actions/src/: CountUntilClientNode.cpp  CountUntilServerNode.cpp
robotx/src/examples/: CMakeLists.txt  package.xml
robotx/src/examples/addtwonumbersclient/: AddTwoNumbersClientNode.cpp  AddTwoNumbersClientNode.h
robotx/src/examples/addtwonumbersserver/: AddTwoNumbersServiceNode.cpp
robotx/src/examples/countuntilactionclient/: CountUntilActionClientNode.cpp  CountUntilActionClientNode.h
robotx/src/examples/countuntilactionclient/client/: CountUntilActionClient.cpp  CountUntilActionClient.h
robotx/src/examples/countuntilactionservice/: CountUntilActionServerNode.cpp  CountUntilActionServerNode.h
robotx/src/examples/countuntilactionservice/service/: CountUntilActionService.cpp  CountUntilActionService.h
robotx/src/examples/numberpublisher/: NumberPublisherNode.cpp  NumberPublisherNode.h
robotx/src/interfaces/: CMakeLists.txt  package.xml
robotx/src/interfaces/action/: CountUntil.action
robotx/src/interfaces/srv/: CatchTurtle.srv
robotx/tests/: CMakeLists.txt  main.cpp  package.xml
robotx/tests/src/: PublisherTest.cpp  PublisherTest.h
src/actions/: CMakeLists.txt  package.xml
src/actions/src/: CountUntilClient.cpp  CountUntilServer.cpp  CountUntilServerQueueGoals.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: my_robot_gazebo.launch.xml  turtlesim_catch_them_all_app.launch.py
src/bringup/rvis/: my_config.rviz
src/closedmessageloop/: CMakeLists.txt  package.xml
src/closedmessageloop/src/: ClosedMessageLoopNode.cpp  ClosedMessageLoopNode.h
src/examples/: CMakeLists.txt  package.xml
src/examples/src/addtwonumbersclient/: AddTwoNumbersClientNode.cpp
src/examples/src/addtwonumbersclient/client/: AddTwoNumbersClient.cpp  AddTwoNumbersClient.h
src/examples/src/addtwonumbersserver/: AddTwoNumbersServiceNode.h
src/examples/src/addtwonumbersserver/service/: AddTwoNumbersService.cpp  AddTwoNumbersService.h
src/examples/src/numberpublisher/: NumberPublisherNode.cpp
src/examples/src/numbersubscriber/: NumberSubscriberNode.cpp  NumberSubscriberNode.h
src/interfaces/: CMakeLists.txt
src/interfaces/msg/: SomeMessage.msg  SomeNumber.msg  Turtle.msg  TurtleArray.msg
src/interfaces/srv/: SomeService.srv
src/my_robot_description/: package.xml
src/my_robot_description/launch/: display.launch.xml
src/my_robot_description/urdf/: comon_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  myrobot.urdf.xacro
src/someservice/: CMakeLists.txt  package.xml
src/someservice/src/: SomeServiceNode.cpp  SomeServiceNode.h
src/someservice/src/client/: SomeClient.cpp  SomeClient.h
src/someservice/src/server/: SomeServer.cpp  SomeServer.h
src/turtlesim_catch_them_all/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/nodes/: CMakeLists.txt
src/turtlesim_catch_them_all/nodes/turtlecontroller/: CMakeLists.txt  TurtleControllerNode.cpp  TurtleControllerNode.h  TurtleInteractions.cpp  TurtleInteractions.h  TurtleMoveCenter.cpp  TurtleMoveCenter.h
src/turtlesim_catch_them_all/nodes/turtlecontroller/client/: CMakeLists.txt  CatchTurtleClient.cpp  CatchTurtleClient.h
src/turtlesim_catch_them_all/nodes/turtlecontroller/main/: CMakeLists.txt  main.cpp
src/turtlesim_catch_them_all/nodes/turtlespawner/: CMakeLists.txt  TurtleSpawnerNode.cpp  TurtleSpawnerNode.h
src/turtlesim_catch_them_all/nodes/turtlespawner/clients/: CMakeLists.txt  KillClient.cpp  KillClient.h  SpawnTurtleClient.cpp  SpawnTurtleClient.h
src/turtlesim_catch_them_all/nodes/turtlespawner/main/: CMakeLists.txt  main.cpp
src/turtlesim_catch_them_all/nodes/turtlespawner/service/: CMakeLists.txt  CatchTurtleService.cpp  CatchTurtleService.h
